added discord rpc (#1178)
* added discord rpc

* linting issues

* Revert "linting issues"

This reverts commit 55f4e39506361c816c391828b6dbd46cfbc1df89.

* fix clang-format issues

* removed wrong rpc submodule

* added correct rpc submodule

* Moved cmake instructions to correct files.

* added minor suggestions from pr

* Added an option to enable/disable RPC, added rpc to emulator.cpp making it work on nonqt builds

* typo & minor stuff

* Changed getInstance implementation with Singleton class.

* Update discord_rpc_handler.cpp

discord id

* fixed ci clangformat errors

---------

Co-authored-by: georgemoralis <giorgosmrls@gmail.com>

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -184,5 +184,10 @@ if (NOT TARGET pugixml::pugixml)
     add_subdirectory(pugixml)
 endif()
 
+# Discord RPC
+set(BUILD_EXAMPLES OFF)
+add_subdirectory(discord-rpc/)
+target_include_directories(discord-rpc INTERFACE discord-rpc/include)
+
 # GCN Headers
 add_subdirectory(gcn)
