--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -188,9 +188,11 @@ if (NOT TARGET pugixml::pugixml)
 endif()
 
 # Discord RPC
-set(BUILD_EXAMPLES OFF)
-add_subdirectory(discord-rpc/)
-target_include_directories(discord-rpc INTERFACE discord-rpc/include)
+if (ENABLE_DISCORD_RPC)
+    set(BUILD_EXAMPLES OFF)
+    add_subdirectory(discord-rpc/)
+    target_include_directories(discord-rpc INTERFACE discord-rpc/include)
+endif()
 
 # GCN Headers
 add_subdirectory(gcn)
