Add scalable vector redraw of shadps4 icon (#1501)
* Add scalable vector redraw of shadps4 icon

* Update icon name in desktop file

* Fix svg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -945,4 +945,5 @@ install(TARGETS shadps4 BUNDLE DESTINATION .)
 if (ENABLE_QT_GUI AND CMAKE_SYSTEM_NAME STREQUAL "Linux")
     install(FILES ".github/shadps4.desktop" DESTINATION "share/applications")
     install(FILES ".github/shadps4.png" DESTINATION "share/icons/hicolor/512x512/apps")
+    install(FILES "src/images/net.shadps4.shadPS4.svg" DESTINATION "share/icons/hicolor/scalable/apps")
 endif()
