--- a/.github/shadps4.desktop
+++ b/.github/shadps4.desktop
@@ -3,7 +3,7 @@ Name=shadPS4
 Exec=shadps4
 Terminal=false
 Type=Application
-Icon=shadps4
+Icon=net.shadps4.shadPS4
 Comment=shadPS4 Emulator
 Categories=Game;
 StartupWMClass=shadps4;
