--- a/REUSE.toml
+++ b/REUSE.toml
@@ -5,9 +5,12 @@ path = [
     "REUSE.toml",
     "CMakeSettings.json",
     ".github/FUNDING.yml",
-    ".github/shadps4.desktop",
     ".github/shadps4.png",
     ".gitmodules",
+    "dist/net.shadps4.shadPS4.desktop",
+    "dist/net.shadps4.shadPS4_metadata.pot",
+    "dist/net.shadps4.shadPS4.metainfo.xml",
+    "dist/net.shadps4.shadPS4.releases.xml",
     "documents/changelog.txt",
     "documents/Quickstart/2.png",
     "documents/Screenshots/*",
