--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,6 @@
 [submodule "externals/LibAtrac9"]
 	path = externals/LibAtrac9
 	url = https://github.com/shadps4-emu/ext-LibAtrac9.git
+[submodule "externals/libpng"]
+	path = externals/libpng
+	url = https://github.com/pnggroup/libpng
