--- a/src/video_core/host_shaders/CMakeLists.txt
+++ b/src/video_core/host_shaders/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SHADER_FILES
     detile_m32x1.comp
     detile_m32x2.comp
     detile_m32x4.comp
+    detile_macro8x1.comp
     detile_macro32x1.comp
     detile_macro32x2.comp
     fs_tri.vert
